<resources>
    <string name="app_name">DiaFit</string>
    <string name="detail_news">Detail News</string>
    <string name="give_feedback">Give feedback</string>
    <string name="change_language">Change language</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="input_data">Input Data</string>
    <string name="result">Result</string>
    <string name="app_logo">App logo</string>
    <string name="hi_gluco_friend">Hi! %s</string>
    <string name="we_have_something_for_you">We have solution for you!</string>
    <string name="profile_page">My Profile</string>
    <string name="home">home page</string>
    <string name="set_your_preferences_here">Set your preferences here!</string>
    <string name="ai_powered_glucose_guide">AI Powered Glucose Guide</string>
    <string name="monitor_your_glucose">Monitor your glucose levels and risk\n
    easily with our AI Powered tool!</string>
    <string name="check_now">Check Now!</string>
    <string name="online_glucose_checking">Online Checking\nGlucose</string>
    <string name="let_our_ai_powered">
        Let our AI Powered\nTool to analyze\nyour data for\ninstant glucose\ninsights.
    </string>
    <string name="manual_entry_results">Manual Entry\nand Results</string>
    <string name="enter_your_data">
        Enter your data\nto get personalized\nfeedback.
    </string>
    <string name="article">Article</string>
    <string name="suggestion">Suggestion to read</string>
    <string name="image_article_suggestion">image article suggestion</string>
    <string name="comparing_camel">Comparing camel, cow and goat\nmilk : Which is best for diabetes\nand heart health?</string>
    <string name="comparing_cow">Comparing camel, cow and goat milk : Which is best for diabetes and heart health?</string>
    <string name="in_a_recent">In a recent review published in the Nutrients lorem ipsum color sit dot amet</string>
    <string name="gender">Gender</string>
    <string name="select_your_gender">Select your gender</string>
    <string name="age">Age</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="smoking_history">Smoking History</string>
    <string name="do_you_smoke">Do you smoke?</string>
    <string name="heart_disease">Heart Disease</string>
    <string name="any_history_of_heart_disease">Any history of heart disease?</string>
    <string name="hypertension">Hypertension</string>
    <string name="do_you_have_high_blood_pressure">Do you have high blood pressure?</string>
    <string name="body_mass_index">Body Mass Index</string>
    <string name="enter_your_bmi">enter your BMI(e.g.,22)</string>
    <string name="hemoglobin_a1c_level">Hemoglobin A1C Level</string>
    <string name="enter_your_hba1c">Enter your HbA1c % (e.g.,5.7)</string>
    <string name="blood_glucose_evel">Blood Glucose Level</string>
    <string name="enter_your_glucose_level">Enter your current glucose level</string>
    <string name="double_check_your_information">Double-check your information!</string>
    <string name="just_one_more_step">Just one more\nstep!</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="success_submit">Success Submit</string>
    <string name="error_empty_field">All field must be filled</string>
    <string name="make_sure_everything_is_correct_before_proceeding.">Make sure everything is\ncorrect before\nproceeding.</string>
    <string name="all_set_up">All set up!</string>
    <string name="you_are_ready_to_go">You’re ready to go!</string>
    <string name="heres_your_result">Here\'s Your Result</string>
    <string name="diabete_result">Diabetic</string>
    <string name="result_data">Result data user</string>
    <string name="play_store">"Check out this app: https://play.google.com/store/apps/details?id="</string>
    <string name="share">Share this app to your friend</string>
    <string name="text_plain">text/plain</string>
    <string name="test">test</string>
    <string name="invalid_view_type">Invalid view type</string>
    <string name="dicover_the_power_of_ai">Discover\nthe power of AI\nto check your\ndiabetes risk!</string>
    <string name="stay_informed_with_the_latest_diabetes_news">Stay informed\nwith the latest\ndiabetes news</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="make_sure_email_valid">Make sure your email is valid</string>
    <string name="username">Username</string>
    <string name="Input_unique_name">Input unique name</string>
    <string name="have_an_account_login">Have an account? </string>
    <string name="dont_have_account">Dont have an account? </string>
    <string name="password">Password</string>
    <string name="Input_password">Password must more than 8 character</string>
    <string name="login">Log in</string>
    <string name="input_your_email">Input your email</string>
    <string name="input_your_password">Input your password</string>
    <string name="title_home">Home</string>
    <string name="title_person">Profile</string>
    <string name="title_history">History</string>
    <string name="guide_your_glucose">Guide Your Glucose</string>
    <string name="app_version_1_0_0">App Version 1.0.0</string>
    <string name="application_logo">application logo</string>
    <string name="onboarding_image">onboarding image</string>
    <string name="sign_up_image">Sign up image</string>
    <string name="login_image">login image</string>
    <string name="date_example">Jumat. 29 November 2024</string>
    <string name="level_hemoglobin_a1c">Hemoglobin A1c Level</string>
    <string name="result_level_hemoglobin">5.7</string>
    <string name="glucose_level">Glucose Level</string>
    <string name="result_glucose_level">5.7</string>
    <string name="diabetes_result">Test result</string>
    <string name="results_diabetes_result">High Risk</string>
    <string name="try_again">Try again</string>
    <string name="you_seem_to_be_offline">You seem to be offline</string>
    <string name="it_seem_you_have_not_history_yet">You haven\'t history yet</string>
    <string name="check_your_internet_connection_and_try_again">Check your internet connection and try again</string>
    <string name="check_your_history_here">Check your diabetes, here!</string>
    <string name="image_no_internet">image no internet</string>
    <string name="sure_want_to_logout">want to logout? after that you should login again</string>
    <string name="logout">Logout</string>
    <string name="network_connection_error">There\'s no internet</string>
    <string name="network_connection_restored">You are connected now</string>
    <string name="an_unexpected_error_occurred">An unexpected error occurred</string>
    <string name="http_error_default_message">An error occurred while processing your request.</string>
    <string name="what_language_do_you_prefer">What language do you prefer?</string>
    <string name="edit_information">Edit your information here</string>
    <string name="your_feedback_is_important_to_us">your feedback is important to us</string>
    <string name="all_fields_must_not_be_empty">All fields must not be empty</string>
    <string name="nama_tidak_boleh_kosong">Nama tidak boleh kosong</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="sign_up_success">Sign up success</string>
    <string name="login_success">Login success</string>
    <string name="profile">Change Profile</string>
    <string name="save">save</string>
    <string name="profile_updated">Profile updated</string>
    <string name="keluhan">Keluhan</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="after_you_logout_you_will_need_to_login_again">After you logout, you will need to login again</string>
    <string name="cancel">cancel</string>
    <string name="we_are_here_to_help_you_nmonitor_your_health_with_ease_nand_precision">We are here to help you\nmonitor your health with ease\nand precision</string>
    <string name="welocome_to_ai_powered">Welocome to AI-Powered</string>
    <string name="diabetes_detection_app">Diabetes Detection App</string>
    <string name="Retry">Retry</string>
    <string name="ok">OK</string>
    <string name="connection_timeout">Connection Timeout. Please try again.</string>
    <string name="you_have_successfully_registered">You\'ve successfully registered!</string>
    <string name="you_have_successfully_login">You\'ve successfully login!</string>
    <string name="congratulation">Congratulation!</string>
    <string name="english">English</string>
    <string name="indonesia">Indonesia</string>
    <string name="chose_language">Chose language</string>
    <string name="continu">Continue</string>
    <string name="image_person_talking">image person talking</string>
    <string name="edit_logo">edit logo</string>
    <string name="logo_share">logo share</string>
    <string name="arrow_logo">arrow logo</string>
    <string name="news_image">news image</string>
    <string name="share_to_your_friend">share_to_your_friend</string>
    <string name="feel_free_to_share_this_app_to_your_friend">feel_free_to_share_this_app_to_your_friend</string>
    <string name="log_out">Log out</string>
    <string name="logo_change_language">logo change language</string>
    <string name="logo_log_out">logo log out</string>
    <string name="service_unavailable">Service Unavailable</string>
    <string name="diafit">DiaFit</string>
    <string name="cek_diabetes_kamu">Cek diabetes kamu!</string>
    <string name="cek_diabetes">Cek Diabetes</string>
    <string name="hemoglobin">Hemoglobin</string>
    <string name="_0_0">0.0</string>
    <string name="g_dl">g/dL</string>
    <string name="diabetes_risk">Diabetes Risk</string>
    <string name="sedang">Sedang</string>
    <string name="resiko">Resiko</string>
    <string name="mg_dl">mg/dL</string>
    <string name="_0">0</string>
    <string name="gula_darah">Gula Darah</string>
    <string name="guest">Sobat DiaFit</string>
    <string name="halo">Halo,</string>
    <string name="rekomendasi">Rekomendasi</string>
    <string name="paham_ntipe_tipe_ndiabetes">Paham\nTipe-tipe\ndiabetes</string>
    <string name="tipe_tipe_diabetes">tipe-tipe diabetes</string>
    <string name="tips_makanan_nuntuk_diabetes">Tips makanan\nuntuk diabetes</string>
    <string name="olahraga_nyang_ndisarankan">Olahraga\nyang\ndisarankan</string>
    <string name="komplikasi_ndiabetes">Komplikasi\ndiabetes</string>
    <string name="artikel">Artikel</string>
    <string name="atur_preferensi_kamu_di_sini">Atur preferensi kamu di sini!</string>
    <string name="normal">Normal</string>
</resources>