<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background">

        <androidx.cardview.widget.CardView
            android:id="@+id/materialCardView"
            android:layout_width="match_parent"
            android:layout_height="184dp"
            app:cardBackgroundColor="@color/diaPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Main LinearLayout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp">

                <!-- First Row -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/diafit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/diafit"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/cek_diabetes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/cek_diabetes"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </LinearLayout>

                <!-- Second Row -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/greeting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/halo"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/guest"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_gula_darah"
            android:layout_width="117dp"
            android:layout_height="126dp"
            android:layout_marginStart="16dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline4"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gula_darah"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="14sp"
                    android:layout_marginTop="16sp"/>

                <TextView
                    android:id="@+id/tv_gula_darah"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="32sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mg_dl"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="14sp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="16dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_hemoglobin"
            android:layout_width="117dp"
            android:layout_height="126dp"
            android:layout_marginStart="16dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cv_gula_darah"
            app:layout_constraintTop_toTopOf="@+id/guideline4"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hemoglobin"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="14sp"
                    android:layout_marginTop="16sp"/>

                <TextView
                    android:id="@+id/tv_hemoglobin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0_0"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="32sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/g_dl"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="14sp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="16dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_diabetes_risk"
            android:layout_width="117dp"
            android:layout_height="126dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline4"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/diabetes_risk"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="14sp"
                    android:layout_marginTop="16sp"/>

                <TextView
                    android:id="@+id/tv_diabet_risk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/normal"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="18sp"
                    android:layout_marginTop="6dp"
                    android:gravity="center" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_cek_diabetes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_stroke_grey"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/cek_diabetes"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:fontFamily="@font/poppins_medium"
            android:drawableEnd="@drawable/arrow_forward_24"
            android:drawablePadding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_hemoglobin"
            android:elevation="2dp"/>

        <TextView
            android:id="@+id/tv_rekomendasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/rekomendasi"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/btn_cek_diabetes"
            app:layout_constraintTop_toBottomOf="@+id/btn_cek_diabetes" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_tipe_diabetes"
            android:layout_width="176dp"
            android:layout_height="76dp"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            app:layout_constraintStart_toStartOf="@+id/tv_rekomendasi"
            app:layout_constraintTop_toBottomOf="@+id/tv_rekomendasi">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/tipe_tipe_diabetes"
                android:scaleType="centerCrop"
                android:src="@drawable/tipe" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/paham_ntipe_tipe_ndiabetes"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_tips"
            android:layout_width="176dp"
            android:layout_height="76dp"
            android:layout_marginStart="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="@+id/btn_cek_diabetes"
            app:layout_constraintStart_toEndOf="@+id/cv_tipe_diabetes"
            app:layout_constraintTop_toTopOf="@+id/cv_tipe_diabetes">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/tips_makanan_nuntuk_diabetes"
                android:scaleType="centerCrop"
                android:src="@drawable/makanan" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/tips_makanan_nuntuk_diabetes"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_olahraga"
            android:layout_width="176dp"
            android:layout_height="76dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            app:layout_constraintStart_toStartOf="@+id/cv_tipe_diabetes"
            app:layout_constraintTop_toBottomOf="@+id/cv_tipe_diabetes">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/olahraga_nyang_ndisarankan"
                android:scaleType="centerCrop"
                android:src="@drawable/olahraga" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/olahraga_nyang_ndisarankan"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_komplikasi"
            android:layout_width="176dp"
            android:layout_height="76dp"
            android:layout_marginStart="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="@+id/btn_cek_diabetes"
            app:layout_constraintStart_toEndOf="@+id/cv_olahraga"
            app:layout_constraintTop_toTopOf="@+id/cv_olahraga">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/komplikasi_ndiabetes"
                android:scaleType="centerCrop"
                android:src="@drawable/komplikasi" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/komplikasi_ndiabetes"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_artikel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/artikel"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/cv_olahraga"
            app:layout_constraintTop_toBottomOf="@+id/cv_olahraga" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_artikel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:listitem="@layout/news_item"
            app:layout_constraintEnd_toEndOf="@+id/cv_komplikasi"
            app:layout_constraintStart_toStartOf="@+id/tv_artikel"
            app:layout_constraintTop_toBottomOf="@+id/tv_artikel" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="118dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>